--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "source": "index.md",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "dev": "parcel _assets/main.css _assets/main.js --dist-dir assets --no-hmr",
-    "build:assets": "parcel build _assets/main.css _assets/main.js --dist-dir assets",
+    "dev": "parcel watch _assets/main.css _assets/main.js --dist-dir assets --no-hmr",
+    "build:assets": "node build.mjs",
     "build:site": "bundle exec jekyll build",
     "build": "npm run build:assets && npm run build:site",
     "deploy": "npm run build && gh-pages -d _site"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "buffer": "^6.0.3",
     "gh-pages": "^4.0.0",
     "parcel": "^2.7.0",
     "postcss": "^8.4.16",
     "stimulus": "^3.1.0",
     "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "bottleneck": "^2.19.5"
   }
 }
